--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mi primer sitio web</title>
 </head>
 <body>
-    
+    <h1>
+        Titulo uno
+    </h1>
+    <h2>
+        Titulo dos
+    </h2>
+    <h3>
+        Titulo tres
+    </h3>
+    <h4>
+        Titulo cuatro
+    </h4>
+    <h5>
+        Titulo cinco
+    </h5>
+    <h6>
+        Titulo seis
+    </h6> <!--encabezados-->
+    <img src="imgs/istockphoto-118003171-612x612.webp" alt="#">
+    <hr><!--linea de separacion horizontal-->
+    <p>
+        <strong>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi voluptates quidem, odit necessitatibus fugit aliquid reiciendis amet neque provident quasi <em> mollitia commodi </em> (cursiva) pariatur <span>error</span> deserunt 
+        <br><br><!--break o salto de linea-->
+        optio voluptatibus ipsum minus saepe.
+        </strong>
+        <a href="contacto.html">contacto</a>
+        <a href="http://google.com">enalce a google</a>
+    </p> <!--parrafo-->
+    <ul>
+        <li>
+            manzana
+        </li>
+        <li>
+            mango
+        </li>
+    </ul><!--lista desordenada-->
+    <img src="https://plus.unsplash.com/premium_photo-1668902223937-4bc3cf80b2a5?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29weWxlZnR8ZW58MHx8MHx8fDA%3D">
+    <ol>
+        <li>
+            manzana
+        </li>
+        <li>
+            mango
+        </li>
+    </ol>
 </body>
 </html>
